--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E10 Bookings</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>AIKYA-AI Infotech Bookings</title>
+    
+    <!-- Social Media Meta Tags for better sharing previews -->
+    <meta property="og:title" content="AIKYA-AI Infotech Bookings" />
+    <meta property="og:description" content="Secure your spot with the world's top innovation leaders. Premium booking platform for AIKYA-AI Infotech PVT LTD." />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="AIKYA-AI Infotech" />
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
