--- a/index.html
+++ b/index.html
@@ -2,47 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>AIKYA-AI Infotech Bookings</title>
-
-    <!-- Social Media Meta Tags -->
+    
+    <!-- Social Media Meta Tags for better sharing previews -->
     <meta property="og:title" content="AIKYA-AI Infotech Bookings" />
-    <meta
-      property="og:description"
-      content="Secure your spot with the world's top innovation leaders. Premium booking platform for AIKYA-AI Infotech PVT LTD."
-    />
+    <meta property="og:description" content="Secure your spot with the world's top innovation leaders. Premium booking platform for AIKYA-AI Infotech PVT LTD." />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="AIKYA-AI Infotech" />
-
-    <!-- Using Tailwind CDN for simplicity in this specific setup -->
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              primary: "#0f172a",
-              secondary: "#334155",
-              accent: "#3b82f6",
+              primary: '#0f172a',
+              secondary: '#334155',
+              accent: '#3b82f6',
             },
             fontFamily: {
-              sans: ["Inter", "sans-serif"],
+              sans: ['Inter', 'sans-serif'],
             },
             animation: {
-              "fade-in": "fadeIn 0.5s ease-out",
-              "slide-up": "slideUp 0.5s ease-out",
+              'fade-in': 'fadeIn 0.5s ease-out',
+              'slide-up': 'slideUp 0.5s ease-out',
             },
             keyframes: {
               fadeIn: {
-                "0%": { opacity: "0" },
-                "100%": { opacity: "1" },
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
               },
               slideUp: {
-                "0%": { transform: "translateY(20px)", opacity: "0" },
-                "100%": { transform: "translateY(0)", opacity: "1" },
+                '0%': { transform: 'translateY(20px)', opacity: '0' },
+                '100%': { transform: 'translateY(0)', opacity: '1' },
               },
             },
           },
@@ -50,9 +43,9 @@
       };
     </script>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
       body {
-        font-family: "Inter", sans-serif;
+        font-family: 'Inter', sans-serif;
         background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
         min-height: 100vh;
       }
@@ -62,23 +55,21 @@
         border: 1px solid rgba(255, 255, 255, 0.5);
       }
     </style>
-    <script type="importmap">
-      {
-        "imports": {
-          "react": "https://esm.sh/react@^19.2.3",
-          "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-          "react/": "https://esm.sh/react@^19.2.3/",
-          "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-          "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-          "vite": "https://esm.sh/vite@^7.2.7",
-          "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
-        }
-      }
-    </script>
-  </head>
+  <script type="importmap">
+{
+  "imports": {
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3"
+  }
+}
+</script>
+<link rel="stylesheet" href="/index.css">
+</head>
   <body>
     <div id="root"></div>
-    <!-- Entry point for the build system -->
-    <script type="module" src="/index.tsx"></script>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
